# TTNet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ttnet/: config.py  entrypoint.py  scheduler.py  types.py
src/ttnet/data/: loader.py  transformers.py  types.py  utils.py
src/ttnet/model/: advanced_learning_strategies.py  factory.py  loss.py  multitask_learning.py  neural_networks.py  ttnet.py  types.py  unbalance_loss.py  utils.py
